tweaked app for heroku

--- a/shop/templates/shop/emptycart.html
+++ b/shop/templates/shop/emptycart.html
@@ -45,7 +45,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<ul> 
 		    <li><span class="glyphicon glyphicon-time" aria-hidden="true"></span><a href="{% url 'logout' %}">Logout</a></li>
 			<li><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>Free shipping On all orders</li>
-			<li><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span><a href="mailto:info@example.com">info@example.com</a></li>
+			<li><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span><a href="mailto:smartshoponline320@gmail.com">smartshoponline320@gmail.com</a></li>
 		</ul>
 	</div>
 </div>
@@ -300,7 +300,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<h4>Store Information</h4>
 					<ul>
 						<li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>Address :  {{ data.address}}, <span> {{ data.city}}.</span></li>
-						<li><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i>Email : <a href="mailto:info@example.com"> {{ data.email1}}</a></li>
+						<li><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i>Email : <a href="mailto:smartshoponline320@gmail.com"> {{ data.email1}}</a></li>
 						<li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i>Phone :  {{ data.phone1}}</li>
 					</ul>
 				</div>
