--- a/shop/templates/shop/profile.html
+++ b/shop/templates/shop/profile.html
@@ -57,25 +57,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<h1><a href="{% url 'index' %}"><img src="{% static 'shop/images/logo3.jpg' %} "></a></h1>
 		</div>
 		<div class="col-md-6 header-middle">
-			<form>
-				<div class="search">
-					<input type="search" value="Search" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Search';}" required="">
-				</div>
-				<div class="section_room">
-					<select id="country" onchange="change_country(this.value)" class="frm-field required">
-						<option value="null">All categories</option>
-						<option value="null">Electronics</option>     
-						<option value="AX">kids Wear</option>
-						<option value="AX">Men's Wear</option>
-						<option value="AX">Women's Wear</option>
-						<option value="AX">Watches</option>
-					</select>
-				</div>
-				<div class="sear-sub">
-					<input type="submit" value=" ">
-				</div>
-				<div class="clearfix"></div>
-			</form>
+			
 		</div>
 		<div class="col-md-3 header-right footer-bottom">
 			<ul>
@@ -111,72 +93,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="collapse navbar-collapse menu--shylock" id="bs-example-navbar-collapse-1">
 				  <ul class="nav navbar-nav menu__list">
 					<li class="active menu_item menuitem--current"><a class="menu_link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a></li>
-					<li class="dropdown menu__item">
-						<a href="#" class="dropdown-toggle menu__link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">men's wear <span class="caret"></span></a>
-							<ul class="dropdown-menu multi-column columns-3">
-								<div class="row">
-									<div class="col-sm-6 multi-gd-img1 multi-gd-text ">
-										<a href="{% url 'mens' %}"><img src="{% static 'shop/images/woo1.jpg' %}" alt=" "/></a>
-									</div>
-									<div class="col-sm-3 multi-gd-img">
-										<ul class="multi-column-dropdown">
-											<li><a href="{% url 'mens' %}">Clothing</a></li>
-											<li><a href="{% url 'mens' %}">Wallets</a></li>
-											<li><a href="{% url 'mens' %}">Footwear</a></li>
-											<li><a href="{% url 'mens' %}">Watches</a></li>
-											<li><a href="{% url 'mens' %}">Accessories</a></li>
-											<li><a href="{% url 'mens' %}">Bags</a></li>
-											<li><a href="{% url 'mens' %}">Caps & Hats</a></li>
-										</ul>
-									</div>
-									<div class="col-sm-3 multi-gd-img">
-										<ul class="multi-column-dropdown">
-											<li><a href="{% url 'mens' %}">Jewellery</a></li>
-											<li><a href="{% url 'mens' %}">Sunglasses</a></li>
-											<li><a href="{% url 'mens' %}">Perfumes</a></li>
-											<li><a href="{% url 'mens' %}">Beauty</a></li>
-											<li><a href="{% url 'mens' %}">Shirts</a></li>
-											<li><a href="{% url 'mens' %}">Sunglasses</a></li>
-											<li><a href="{% url 'mens' %}">Swimwear</a></li>
-										</ul>
-									</div>
-									<div class="clearfix"></div>
-								</div>
-							</ul>
-					</li>
-					<li class="dropdown menu__item">
-						<a href="#" class="dropdown-toggle menu__link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">women's wear <span class="caret"></span></a>
-							<ul class="dropdown-menu multi-column columns-3">
-								<div class="row">
-									<div class="col-sm-3 multi-gd-img">
-										<ul class="multi-column-dropdown">
-											<li><a href="{% url 'womens' %}">Clothing</a></li>
-											<li><a href="{% url 'womens' %}">Wallets</a></li>
-											<li><a href="{% url 'womens' %}">Footwear</a></li>
-											<li><a href="{% url 'womens' %}">Watches</a></li>
-											<li><a href="{% url 'womens' %}">Accessories</a></li>
-											<li><a href="{% url 'womens' %}">Bags</a></li>
-											<li><a href="{% url 'womens' %}">Caps & Hats</a></li>
-										</ul>
-									</div>
-									<div class="col-sm-3 multi-gd-img">
-										<ul class="multi-column-dropdown">
-											<li><a href="{% url 'womens' %}">Jewellery</a></li>
-											<li><a href="{% url 'womens' %}">Sunglasses</a></li>
-											<li><a href="{% url 'womens' %}">Perfumes</a></li>
-											<li><a href="{% url 'womens' %}">Beauty</a></li>
-											<li><a href="{% url 'womens' %}">Shirts</a></li>
-											<li><a href="{% url 'womens' %}">Sunglasses</a></li>
-											<li><a href="{% url 'womens' %}">Swimwear</a></li>
-										</ul>
-									</div>
-									<div class="col-sm-6 multi-gd-img multi-gd-text ">
-										<a href="{% url 'womens' %}"><img src="{% static 'shop/images/woo.jpg' %}" alt=" "/></a>
-									</div>
-									<div class="clearfix"></div>
-								</div>
-							</ul>
-					</li>
+					<li class=" menu_item"><a class="menu_link" href="{% url 'mens' %}">Mens</a></li>
+					<li class=" menu_item"><a class="menu_link" href="{% url 'womens' %}">Womens</a></li>
 					<li class=" menu_item"><a class="menu_link" href="{% url 'electronics' %}">Electronics</a></li>
 					<li class=" menu_item"><a class="menu_link" href="{% url 'contact' %}">Contact</a></li>
 					<li class=" menu_item"><a class="menu_link" href="{% url 'profile' %}">Profile</a></li>
@@ -258,21 +176,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="container">
 		<div class="col-md-3 footer-left">
 			<h2><a href="{% url 'index' %}"><img src="{% static 'shop/images/logo3.jpg' %}" alt=" " /></a></h2>
-			<p>Neque porro quisquam est, qui dolorem ipsum quia dolor
-			sit amet, consectetur, adipisci velit, sed quia non 
-			numquam eius modi tempora incidunt ut labore 
-			et dolore magnam aliquam quaerat voluptatem.</p>
+			<p>Smart Shop does not only sell clothing but also shoes. It covers a wide range of fashion items. The site offers a customer service number, which means it’s priority is customer satisfaction.</p>
 		</div>
 		<div class="col-md-9 footer-right">
-			<div class="col-sm-6 newsleft">
-				<h3>SIGN UP FOR NEWSLETTER !</h3>
-			</div>
-			<div class="col-sm-6 newsright">
-				<form>
-					<input type="text" value="Email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}" required="">
-					<input type="submit" value="Submit">
-				</form>
-			</div>
+			
 			<div class="clearfix"></div>
 			<div class="sign-grds">
 				<div class="col-md-4 sign-gd">
@@ -283,6 +190,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<li><a href="{% url 'womens' %}">Women's Wear</a></li>
 						<li><a href="{% url 'electronics' %}">Electronics</a></li>
 						<li><a href="{% url 'contact' %}">Contact</a></li>
+						<li><a href="{% url 'profile' %}">Profile</a></li>
 					</ul>
 				</div>
 				{% for data in H %}
@@ -313,7 +221,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 		</div>
 		<div class="clearfix"></div>
-		<p class="copy-right">&copy 2016 Smart Shop. All rights reserved | Design by <a href="http://w3layouts.com/">W3layouts</a></p>
 	</div>
 </div>
 <!-- //footer -->
