--- a/shop/templates/shop/order_complete.html
+++ b/shop/templates/shop/order_complete.html
@@ -177,6 +177,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<li><a href="{% url 'womens' %}">Women's Wear</a></li>
 						<li><a href="{% url 'electronics' %}">Electronics</a></li>
 						<li><a href="{% url 'contact' %}">Contact</a></li>
+						<li><a href="{% url 'profile' %}">Profile</a></li>
+
 					</ul>
 				</div>
 				{% for data in H %}
