--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -61,14 +61,21 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 		<div class="col-md-3 header-right footer-bottom">
 			<ul>
-				<li><a href="{% url 'login' %}" class="use1" ><span>Login</span></a>
-				<li><a href="#" class="use1" data-toggle="modal" data-target="#myModal5"><span>Sign Up</span></a>
+				<li><a href="{% url 'login' %}" class="use1" ></a>
+				<li><a href="#" class="use1" data-toggle="modal" data-target="#myModal5"></a>
 					
 				</li>
 				<li><a class="fb" href="https://www.facebook.com/"></a></li>
 				<li><a class="twi" href="https://www.twitter.com/"></a></li>
 				<li><a class="insta" href="https://www.instagram.com/"></a></li>
 				<li><a class="you" href="https://www.youtube.com/"></a></li>
+
+				<li>Login</li>
+				<li>Sign up</li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li>
 			</ul>
 		</div>
 		<div class="clearfix"></div>
